fixed post alignment and widths, removed JS from post pages

--- a/assets/css/components/ghost.css
+++ b/assets/css/components/ghost.css
@@ -12,10 +12,6 @@
     width: 100%;
 }
 
-.kg-image {
-    max-width: 100%;
-}
-
 .kg-card figcaption {
     padding: 1.5rem;
     font-size: 1.3rem;
