--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -26,6 +26,7 @@ Nav Bar
 Homepage Hero
 Homepage Project Menu
 Post
+KG Image
 404
 Page
 Responsive Styles
@@ -54,6 +55,10 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   margin: 1em 0 0.5em 0;
+}
+
+blockquote, p {
+  margin: 0 0 2em;
 }
 
 p {
@@ -273,19 +278,80 @@ pre {
 /* Post
 /* ---------------------------------------------------------- */
 
-.post-column {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.post-content h1,
+.post-content h2,
+.post-content h3,
+.post-content h4,
+.post-content h5,
+.post-content h6,
+.post-content p,
+.post-content ul,
+.post-content ol,
+.post-content dl,
+.post-content pre,
+.post-content blockquote,
+.footnotes {
+    min-width: 100%;
 }
 
-.post-content-title, .post-content-excerpt, .post-content-body {
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-.post-content-excerpt, .post-content-body {
+.post-content {
   max-width: 670px;
+  margin: 0 auto;
+ }
+
+article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+article img {
+  display: block;
+  max-width: 100%;
+}
+
+.kg-width-wide img {
+  max-width: 85vw;
+}
+
+.kg-width-full img {
+  max-width: 100vw;
+}
+
+.post-hero-image img {
+  width: 100%;
+  height: 720px;
+  object-fit: cover;
+}
+
+.kg-card, .post-hero-image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 2em 0 4em;
+}
+
+.kg-width-wide, .kg-width-full {
+  position: relative;
+  width: 100vw;
+  min-width: 100%;
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
+  transform: translateX(calc(50vw - 50%));
+}
+
+.post-hero-image {
+  width: 100vw;
+  max-width: 85vw;
+}
+
+article figure {
+  margin: 0;
+}
+
+article figcaption {
+  text-align: center;
 }
 
 .post-content-title {
@@ -300,10 +366,7 @@ pre {
   align-items: center;
   justify-content: center;
   margin: 24px 0 24px 0;
-}
-
-.post-content-image {
-  margin: 24px 0 48px 0;
+  font-size: 1.3em;
 }
 
 .post-endmark {
@@ -318,6 +381,12 @@ pre {
   border-radius: 50%;
   display: inline-block;
 }
+
+
+/* KG Image
+/* ---------------------------------------------------------- */
+
+
 
 .kg-card figcaption {
   font-weight: 400;
@@ -382,12 +451,18 @@ pre {
   line-height: 94px;
 }
 
-.post-content-excerpt, .post-content-body {
-  width: 100%;
+article {
+  margin: 0 40px;
 }
 
-.post-content-title {
-  font-size: 80px;
+.post-hero-image img {
+  height: auto;
+}
+
+
+.post-hero-image, .kg-width-wide img {
+  max-width: 100vw;
+  padding: 0 40px;
 }
 
 }
@@ -428,7 +503,7 @@ pre {
   }
 
   .post-content-title {
-    font-size: 42px;
+    font-size: 64px;
   }
 
 }
